# hs-xiangqi

./: .ghci  .gitignore  CHANGELOG.md  README.md  hie.yaml  stack.yaml  xiangqi.cabal
src/: Helpers.hs  MoveGeneration.hs  SquareSet.hs  Xiangqi.hs
src/Xiangqi/: Board.hs  Game.hs  Helpers.hs  MoveGeneration.hs  SquareSet.hs  Types.hs
test/: Spec.hs
